--- a/Application.Database/Application.Database.csproj
+++ b/Application.Database/Application.Database.csproj
@@ -19,4 +19,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Application.Authorize\Application.Authorize.csproj" />
+  </ItemGroup>
+
 </Project>
