--- a/Application.Web.Client/wwwroot/appsettings.json
+++ b/Application.Web.Client/wwwroot/appsettings.json
@@ -1,8 +1,8 @@
 {
-  "localAPIUrl": "https://localhost:7203",
+  "localAPIUrl": "https://localhost:5147",
   "siteAPIUrl": "http://localhost:44379/",
-  "BaseAPIUrl": "https://localhost:7203",
+  "BaseAPIUrl": "https://localhost:5147",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=_CHANGE_ME;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=TourAgency;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
