Добавил клиента веб, начал настраивать его под сервер, прописал вывод, решить проблемы с 404

--- a/Application.WebApi/appsettings.json
+++ b/Application.WebApi/appsettings.json
@@ -3,6 +3,7 @@
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=TourAgency;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Logging": {
+    "IncludeScopes": false,
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
