PageComponent, Библиотеки, Настройка БД

--- a/Application.Web.Client/appsettings.json
+++ b/Application.Web.Client/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=TourAgency;Trusted_Connection=True;MultipleActiveResultSets=True"
+    //"DbConnection": "Host=server93.hosting.reg.ru;Database=u2011587_shvyrka;Username=u2011587_shvyrka;Password=qO5zL9cV8xdN1aZ7"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
