Создание заказа, рефакторинг имплементируемых членов, иконки страниц

--- a/Application.Web.Client/Application.Web.Client.csproj
+++ b/Application.Web.Client/Application.Web.Client.csproj
@@ -33,4 +33,13 @@
     <ProjectReference Include="..\Application.Database\Application.Database.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Pages\OrderPage\CreateOrder.razor">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+    </Content>
+    <Content Update="Pages\OrderPage\IndexOrder.razor">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+    </Content>
+  </ItemGroup>
+
 </Project>
