--- a/Application.MobileClient/Application.MobileClient/Application.MobileClient.csproj
+++ b/Application.MobileClient/Application.MobileClient/Application.MobileClient.csproj
@@ -21,11 +21,23 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="AllTours.xaml.cs">
+      <DependentUpon>%(Filename)</DependentUpon>
+    </Compile>
     <Compile Update="AppShell.xaml.cs">
       <DependentUpon>%(Filename)</DependentUpon>
     </Compile>
     <Compile Update="AppShell1.xaml.cs">
       <DependentUpon>AppShell1.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="FoundedTours.xaml.cs">
+      <DependentUpon>%(Filename)</DependentUpon>
+    </Compile>
+    <Compile Update="MainPage.xaml.cs">
+      <DependentUpon>%(Filename)</DependentUpon>
+    </Compile>
+    <Compile Update="OrderList.xaml.cs">
+      <DependentUpon>%(Filename)</DependentUpon>
     </Compile>
     <Compile Update="Views\AboutPage.xaml.cs">
       <DependentUpon>%(Filename)</DependentUpon>
