Решистрация, Авторизация мобильного клиента

--- a/Application.MobileClient/Application.MobileClient/Application.MobileClient.csproj
+++ b/Application.MobileClient/Application.MobileClient/Application.MobileClient.csproj
@@ -57,5 +57,11 @@
     <EmbeddedResource Update="AppShellFlyout.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="AuthorizationPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="RegPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
