--- a/Application.MobileClient/Application.MobileClient/Application.MobileClient.csproj
+++ b/Application.MobileClient/Application.MobileClient/Application.MobileClient.csproj
@@ -63,5 +63,8 @@
     <EmbeddedResource Update="RegPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="ToursForClient.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
